Add infrastructure setup and agent workflow enhancements
- Introduced Terraform configuration files for Azure resources including resource groups, container registries, and container apps.
- Added scripts for deploying infrastructure and agents with Azure CLI integration.
- Enhanced workflow agent to include URLs in discovery logs.
- Created .gitignore for Terraform files and added README for infrastructure setup instructions.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,6 +57,21 @@
       "justMyCode": false
     },
     {
+      "name": "Debug: workflow (ACA agents)",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/agents/workflow.py",
+      "cwd": "${workspaceFolder}",
+      "python": "${workspaceFolder}/.venv/bin/python",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}/src",
+        "WRITER_A2A_BASE_URL": "<WRITER_ACA_BASE_URL>",
+        "REVIEWER_A2A_BASE_URL": "<REVIEWER_ACA_BASE_URL>"
+      },
+      "console": "integratedTerminal",
+      "justMyCode": false
+    },
+    {
       "name": "Debug: workflow (wait for agents)",
       "type": "debugpy",
       "request": "launch",
