update authentication for az container apps

--- a/.env.sample
+++ b/.env.sample
@@ -39,6 +39,15 @@ AZURE_AI_MODEL_DEPLOYMENT_NAME="<your-model-deployment-name>"
 
 
 # ------------------------------
+# A2A client auth (Entra ID / Easy Auth)
+# ------------------------------
+# If your agents are protected by Entra ID (e.g., Container Apps Easy Auth), set the
+# OAuth2 scope used by the workflow runner to acquire an access token.
+# Common pattern:
+# A2A_AUTH_SCOPE="api://<app-client-id>/.default"
+
+
+# ------------------------------
 # Service metadata
 # ------------------------------
 # Used for telemetry service.name and /healthz responses.
