feat: Add MCP hosting utilities and example workflow integration
- Introduced mcp_hosting.py with helpers to mount MCP tools in FastAPI applications.
- Created mount_mcp_tools function to expose MCP tools via HTTP endpoints.
- Developed workflow_mcp.py as an example of integrating MCP agents with Microsoft Agent Framework.
- Demonstrated a workflow that sequentially calls writer and reviewer agents using MCP tools.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -87,6 +87,20 @@
       "preLaunchTask": "Wait for writer+reviewer APIs (healthz initialized)",
       "console": "integratedTerminal",
       "justMyCode": false
+    },
+    {
+      "name": "Debug: MCP Workflow (wait for agents)",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/agents/workflow_mcp.py",
+      "cwd": "${workspaceFolder}",
+      "python": "${workspaceFolder}/.venv/bin/python",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}/src"
+      },
+      "preLaunchTask": "Wait for writer+reviewer APIs (healthz initialized)",
+      "console": "integratedTerminal",
+      "justMyCode": false
     }
   ],
   "compounds": [
@@ -96,6 +110,15 @@
         "Debug: writer agent",
         "Debug: reviewer agent",
         "Debug: workflow (wait for agents)"
+      ],
+      "stopAll": true
+    },
+    {
+      "name": "Debug: agents + MCP workflow",
+      "configurations": [
+        "Debug: writer agent",
+        "Debug: reviewer agent",
+        "Debug: MCP Workflow (wait for agents)"
       ],
       "stopAll": true
     }
